--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -1,8 +1,5 @@
 name: Build and Deploy to AKS
-on:
-  push:
-    branches:
-      - master
+on: push
 
 env:
   RESOURCEGROUPNAME: "spring-sample-rg"
@@ -26,10 +23,23 @@ env:
 
 jobs:
   build:
-    name: Build and push image to container registry
+    name: Build and test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: build, test and package
+      id: build-test
+      run: |
+          cd Application
+          ./mvnw package
+  
+  publish:
+    name: Publish to container registry
+    if: contains (github.ref, 'RC') || contains (github.ref, 'RELEASE')
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    # - uses: actions/checkout@v2
 
     # login to azure
     - name: Login to Azure
@@ -63,10 +73,12 @@ jobs:
         docker build "$GITHUB_WORKSPACE/Application" -f  "Application/Dockerfile" -t ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
         docker push ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
  
-  deploy:
-    name: Deploy application to AKS
-    needs: build
+  deploy-stage:
+    name: Deploy application to stage AKS 
+    if: contains (github.ref, 'RC')
+    needs: publish
     runs-on: ubuntu-latest
+    # if: contains(github.head_ref, 'feature') || contains(github.head_ref, 'release')
     steps:
     - uses: actions/checkout@v2
 
