--- a/Application/sonar-project.properties
+++ b/Application/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=Spring-Sample
 # relative paths to source directories. More details and properties are described
 # in https://docs.sonarqube.org/latest/project-administration/narrowing-the-focus/ 
-sonar.sources=.
+sonar.sources=src/main/java
+sonar.java.binaries=target/classes
