--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -1,5 +1,12 @@
 name: Build and Deploy to AKS
-on: push
+on: 
+  push
+  workflow_dispatch
+    inputs:
+      job:
+        description: 'deploy it'
+        required: true
+        default: 'prod-deploy'
 
 env:
   RESOURCEGROUPNAME: "spring-sample-rg"
@@ -48,7 +55,8 @@ jobs:
                   
   publish:
     name: Publish to container registry
-    if: contains (github.ref, 'RC') || contains (github.ref, 'RELEASE')
+    # if: contains (github.ref, 'RC') || contains (github.ref, 'RELEASE')
+    if: ${{ github.event.inputs.job == 'prod-deploy' }}
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -92,7 +100,8 @@ jobs:
  
   deploy-stage:
     name: Deploy application to stage AKS 
-    if: contains (github.ref, 'RC')
+    # if: contains (github.ref, 'RC')
+    if: ${{ github.event.inputs.job == 'prod-deploy' }}
     needs: publish
     runs-on: ubuntu-latest
     # if: contains(github.head_ref, 'feature') || contains(github.head_ref, 'release')
