--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -1,7 +1,8 @@
 name: Build and Deploy to AKS
 on: 
-  # push:
-  #   branch: 
+  push:
+    branches: 
+      - *
   workflow_dispatch: 
     inputs:
       job:
