--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -1,14 +1,5 @@
 name: Build and Deploy to AKS
-on: 
-  push:
-    branches: 
-      - '**'
-  workflow_dispatch: 
-    inputs:
-      job:
-        description: 'deploy it'
-        required: true
-        default: 'prod-deploy'
+on: push
 
 env:
   RESOURCEGROUPNAME: "spring-sample-rg"
@@ -57,8 +48,7 @@ jobs:
                   
   publish:
     name: Publish to container registry
-    # if: contains (github.ref, 'RC') || contains (github.ref, 'RELEASE')
-    if: ${{ github.event.inputs.job == 'prod-deploy' }}
+    if: contains (github.ref, 'RC') || contains (github.ref, 'RELEASE')
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -73,25 +63,6 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    # - name: Create AKS Cluster
-    #   uses: azure/arm-deploy@v1
-    #   id: deploy
-    #   with:
-    #     scope: resourcegroup
-    #     subscriptionId: ${{ env.SUBSCRIPTIONID }}
-    #     resourceGroupName: ${{ env.RESOURCEGROUPNAME }}
-    #     template: ./ArmTemplates/aks-template.json
-    #     parameters: clusterName="${{ env.CLUSTERNAME }}" appInsightsLocation="${{ env.APPINSIGHTSLOCATION }}" clusterLocation="${{ env.CLUSTERLOCATION }}" agentCount="${{ env.AGENTCOUNT }}" agentVMSize="${{ env.AGENTVMSIZE }}" kubernetesVersion="${{ env.KUBERNETESVERSION }}" omsLocation="${{ env.OMSLOCATION }}" omsWorkspaceName="${{ env.OMSWORKSPACENAME }}" httpApplicationRoutingEnabled="${{ env.HTTPSAPPLICATIONROUTINGENABLED }}"  dnsPrefix="${{ env.CLUSTERNAME }}"
-
-    # - name: Create ACR
-    #   id: createACR
-    #   run: |
-    #       az acr create -n ${{ env.REGISTRYNAME }} -g ${{ env.RESOURCEGROUPNAME }} --location "${{env.REGISTRYLOCATION}}" --sku ${{env.REGISTRYSKU}} --admin-enabled
-    #       echo "::set-output name=acr_username::`az acr credential show -n ${{ env.REGISTRYNAME }} --query username`"
-    #       echo "::set-output name=acr_password::`az acr credential show -n ${{ env.REGISTRYNAME }} --query passwords[0].value`"
-    #       echo "::add-mask::`az acr credential show -n ${{ env.REGISTRYNAME }} --query passwords[0].value`"
-
     - name: Build and push image to ACR
       id: build-image
       run: |
@@ -102,8 +73,9 @@ jobs:
  
   deploy-stage:
     name: Deploy application to stage AKS 
-    # if: contains (github.ref, 'RC')
-    if: ${{ github.event.inputs.job == 'prod-deploy' }}
+    if: contains (github.ref, 'RC')
+    environment:
+      name: stage-environment
     needs: publish
     runs-on: ubuntu-latest
     # if: contains(github.head_ref, 'feature') || contains(github.head_ref, 'release')
