--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -45,6 +45,24 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}     
+
+  code-analysis:
+    name: Static analysis for code quality
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Official SonarQube Scan
+      # You may pin to the exact commit or the version.
+      # uses: SonarSource/sonarqube-scan-action@069e3332cbefb8659c02d77b21a04719d3ef7c9b
+      uses: SonarSource/sonarqube-scan-action@v1.0.0
+      with:
+        # Additional arguments to the sonar-scanner
+        args: # optional
+        # Set the sonar.projectBaseDir analysis property
+        projectBaseDir: Application    
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}         
                   
   publish:
     name: Publish to container registry
