--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -31,26 +31,19 @@ jobs:
       id: build-test
       run: |
           cd Application
-          ./mvnw compile test
-
-    - name: Official SonarQube Scan
-      # You may pin to the exact commit or the version.
-      # uses: SonarSource/sonarqube-scan-action@069e3332cbefb8659c02d77b21a04719d3ef7c9b
-      uses: SonarSource/sonarqube-scan-action@v1.0.0
-      with:
-        # Additional arguments to the sonar-scanner
-        args: # optional
-        # Set the sonar.projectBaseDir analysis property
-        projectBaseDir: Application    
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}     
+          ./mvnw compile test 
 
   code-analysis:
     name: Static analysis for code quality
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: package
+      id: build-test
+      run: |
+          cd Application
+          ./mvnw pacakge 
+          
     - name: Official SonarQube Scan
       # You may pin to the exact commit or the version.
       # uses: SonarSource/sonarqube-scan-action@069e3332cbefb8659c02d77b21a04719d3ef7c9b
@@ -68,7 +61,7 @@ jobs:
     name: Publish to container registry
     if: contains (github.ref, 'RC') || contains (github.ref, 'RELEASE')
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, code-analysis]
     steps:
     - uses: actions/checkout@v2
     - name: pacakge war
