--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -42,8 +42,7 @@ jobs:
       id: build-test
       run: |
           cd Application
-          ./mvnw pacakge 
-          
+          ./mvnw package 
     - name: Official SonarQube Scan
       # You may pin to the exact commit or the version.
       # uses: SonarSource/sonarqube-scan-action@069e3332cbefb8659c02d77b21a04719d3ef7c9b
