--- a/Application/pom.xml
+++ b/Application/pom.xml
@@ -34,7 +34,7 @@
     </dependencies>
 
     <properties>
-        <java.version>1.11</java.version>
+        <maven.compiler.release>11</maven.compiler.release>
     </properties>
 
     <build>
@@ -58,10 +58,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version> 
+                <version>3.8.0</version>
                 <configuration>
-                    <source>1.11</source>
-                    <target>1.11</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
