--- a/Application/sonar-project.properties
+++ b/Application/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=Spring-Sample
+sonar.projectKey=azure-spring
 # relative paths to source directories. More details and properties are described
 # in https://docs.sonarqube.org/latest/project-administration/narrowing-the-focus/ 
 sonar.sources=src/main/java
