--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,24 +23,25 @@ variables:
 
 
 stages:
-- task: Maven@3
-  inputs:
-    mavenPomFile: 'Application/pom.xml'
-    publishJUnitResults: false
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '11'
-    mavenVersionOption: 'Default'
-    mavenAuthenticateFeed: false
-    effectivePomSkip: false
-    sonarQubeRunAnalysis: false
-- stage: DockerBuild
-  displayName: Docker Build stage
+- stage: Build
+  displayName: Build stage
   jobs:
   - job: Build
     displayName: Build
     pool:
       vmImage: $(vmImageName)
     steps:
+    - task: Maven@3
+      displayName: Maven Build
+      inputs:
+        mavenPomFile: 'pom.xml'
+        publishJUnitResults: false
+        javaHomeOption: 'JDKVersion'
+        jdkVersionOption: 1.11
+        mavenVersionOption: 'Default'
+        mavenAuthenticateFeed: false
+        effectivePomSkip: false
+        sonarQubeRunAnalysis: false
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
@@ -56,7 +57,7 @@ stages:
 
 - stage: Deploy
   displayName: Deploy stage
-  dependsOn: DockerBuild
+  dependsOn: Build
 
   jobs:
   - deployment: Deploy
