--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ stages:
     - task: Maven@3
       displayName: Maven Build
       inputs:
-        mavenPomFile: 'pom.xml'
+        mavenPomFile: 'Application/pom.xml'
         publishJUnitResults: false
         javaHomeOption: 'JDKVersion'
         jdkVersionOption: 1.11
