--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -1,14 +1,20 @@
-# database init, supports mysql too
-database=h2
-spring.datasource.schema=classpath*:db/${database}/schema.sql
-spring.datasource.data=classpath*:db/${database}/data.sql
+database=postgres
+
+spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASS}
+    
+# SQL is written to be idempotent so this is safe
+spring.datasource.initialization-mode=always
 
 # Web
 spring.thymeleaf.mode=HTML
 
 # JPA
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database=POSTGRESQL
 spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
 
 # Internationalization
 spring.messages.basename=messages/messages
@@ -18,7 +24,7 @@ management.endpoints.web.exposure.include=*
 
 # Logging
 # logging.level.org.springframework=INFO
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=INFO
 logging.level.org.springframework.context.annotation=TRACE
 
 # Maximum time static resources should be cached
