--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -17,3 +17,30 @@ spec:
           image: azurespringacr.azurecr.io/azurespring
           ports:
           - containerPort: 80
+          volumeMounts:
+          - name: secrets-store01-inline
+            mountPath: "/mnt/secrets-store"
+            readOnly: true
+          env:
+          - name: POSTGRES_URL
+            valueFrom:
+              secretKeyRef:
+                name: dbsecret
+                key: postgres-url
+          - name: POSTGRES_USER
+            valueFrom:
+              secretKeyRef:
+                name: dbsecret
+                key: postgres-user 
+          - name: POSTGRES_PASS
+            valueFrom:
+              secretKeyRef:
+                name: dbsecret
+                key: postgres-pass
+      volumes:
+      - name: secrets-store01-inline
+        csi:
+          driver: secrets-store.csi.k8s.io
+          readOnly: true
+          volumeAttributes:
+            secretProviderClass: "azure-keys"          
