--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,9 @@ variables:
   dockerfilePath: '**/Dockerfile'
   tag: '$(Build.BuildId)'
   imagePullSecret: 'azurespringacr1580782c-auth'
-
+  # Maven Caching
+  MAVEN_CACHE_FOLDER: $(Pipeline.Workspace)/.m2/repository
+  MAVEN_OPTS: '-Dmaven.repo.local=$(MAVEN_CACHE_FOLDER)'
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
 
@@ -35,7 +37,27 @@ stages:
     displayName: Build
     pool:
       vmImage: $(vmImageName)
+      
     steps:
+    - task: AzureKeyVault@1
+      inputs:
+        azureSubscription: 'keyvault'                    ## YOUR_SERVICE_CONNECTION_NAME
+        KeyVaultName: 'andy-cert-keyvault'                         ## YOUR_KEY_VAULT_NAME
+        SecretsFilter: 'postgres-url'                          ## YOUR_SECRET_NAME. Default value: *
+        RunAsPreJob: false                                   ## Make the secret(s) available to the whole job
+    - bash: |
+        echo "Secret Found! $MY_MAPPED_ENV_VAR"        
+      env:
+        MY_MAPPED_ENV_VAR: $(postgres-url)
+
+    - task: Cache@2
+      displayName: Cache Maven local repo  
+      inputs:
+        key: 'maven | "$(Agent.OS)" | **/pom.xml'
+        restoreKeys: |
+          maven | "$(Agent.OS)"
+          maven
+        path: $(MAVEN_CACHE_FOLDER) 
     - task: Maven@3
       displayName: Maven Build
       inputs:
@@ -44,6 +66,7 @@ stages:
         javaHomeOption: 'JDKVersion'
         jdkVersionOption: 1.11
         mavenVersionOption: 'Default'
+        mavenOptions: '$(MAVEN_OPTS)'
         mavenAuthenticateFeed: false
         effectivePomSkip: false
         sonarQubeRunAnalysis: false
