--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,6 +70,7 @@ stages:
         mavenAuthenticateFeed: false
         effectivePomSkip: false
         sonarQubeRunAnalysis: false
+        options: '-DskipTests=true'
     - task: Docker@2
       displayName: Build and push an image to container registry
       condition: contains(variables['build.sourceBranch'], 'RC')
