move maven option

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,11 +66,11 @@ stages:
         javaHomeOption: 'JDKVersion'
         jdkVersionOption: 1.11
         mavenVersionOption: 'Default'
-        mavenOptions: '-DPOSTGRES_URL=$(postgres-url) -DPOSTGRES_USER=$(postgres-user) -DPOSTGRES_PASS=$(postgres-pass) $(MAVEN_OPTS)'
+        mavenOptions: '$(MAVEN_OPTS)'
         mavenAuthenticateFeed: false
         effectivePomSkip: false
         sonarQubeRunAnalysis: false
-        options: '-DskipTests=true'
+        options: '-DskipTests=true -DPOSTGRES_URL=$(postgres-url) -DPOSTGRES_USER=$(postgres-user) -DPOSTGRES_PASS=$(postgres-pass)'
     - task: Docker@2
       displayName: Build and push an image to container registry
       condition: contains(variables['build.sourceBranch'], 'RC')
