--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,10 +45,6 @@ stages:
         KeyVaultName: 'andy-cert-keyvault'                         ## YOUR_KEY_VAULT_NAME
         SecretsFilter: 'postgres-url, postgres-user, postgres-pass'                      ## YOUR_SECRET_NAME. Default value: *
         RunAsPreJob: false                                   ## Make the secret(s) available to the whole job
-    # - bash: |
-    #     echo "Secret Found! $MY_MAPPED_ENV_VAR"        
-    #   env:
-    #     MY_MAPPED_ENV_VAR: $(postgres-url)
 
     - task: Cache@2
       displayName: Cache Maven local repo  
@@ -62,14 +58,17 @@ stages:
       displayName: Maven Build
       inputs:
         mavenPomFile: 'Application/pom.xml'
-        publishJUnitResults: false
+        publishJUnitResults: true
+        codeCoverageTool: 'jacoco'
+        codeCoverageClassFilesDirectories:  'Application/target/classes, Application/target/testClasses'
+        codeCoverageSourceDirectories: 'Application/src/java, Application/src/test'
         javaHomeOption: 'JDKVersion'
         jdkVersionOption: 1.11
         mavenVersionOption: 'Default'
         mavenOptions: '$(MAVEN_OPTS)'
         mavenAuthenticateFeed: false
         effectivePomSkip: false
-        sonarQubeRunAnalysis: false
+        sonarQubeRunAnalysis: true
         options: '-DPOSTGRES_URL=$(postgres-url) -DPOSTGRES_USER=$(postgres-user) -DPOSTGRES_PASS=$(postgres-pass)'
     - task: Docker@2
       displayName: Build and push an image to container registry
