--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,6 +61,7 @@ stages:
         scannerMode: CLI
         # configFile: 'Application/sonar-project.properties'
         extraProperties: |
+          sonar.projectKey=azure-spring
           sonar.branch.name=$('build.sourceBranch')
           sonar.sources=Application/src/main/java
           sonar.java.binaries=Application/target/classes
