--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,6 +56,7 @@ stages:
         path: $(MAVEN_CACHE_FOLDER) 
 
     - task: SonarQubePrepare@4
+      condition: or (contains(variables['build.sourceBranchName'], 'main'), contains(variables['build.sourceBranchName'], 'master'))
       inputs:
         SonarQube: 'sonarqube-local'
         scannerMode: CLI
@@ -82,7 +83,9 @@ stages:
         effectivePomSkip: false
         options: '-DPOSTGRES_URL=$(postgres-url) -DPOSTGRES_USER=$(postgres-user) -DPOSTGRES_PASS=$(postgres-pass)'
         goals: "-B package"
+
     - task: SonarSource.sonarqube.6D01813A-9589-4B15-8491-8164AEB38055.SonarQubeAnalyze@5
+      condition: or (contains(variables['build.sourceBranchName'], 'main'), contains(variables['build.sourceBranchName'], 'master'))
       displayName: 'Run Code Analysis'        
     - task: Docker@2
       displayName: Build and push an image to container registry
