--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,7 +82,7 @@ stages:
         options: '-DPOSTGRES_URL=$(postgres-url) -DPOSTGRES_USER=$(postgres-user) -DPOSTGRES_PASS=$(postgres-pass)'
         goals: "-B package"
 
-    - task: SonarSource.sonarqube.6D01813A-9589-4B15-8491-8164AEB38055.SonarQubeAnalyze@5
+    - task: SonarQubeAnalyze@5
       displayName: 'Run Code Analysis'        
     - task: Docker@2
       displayName: Build and push an image to container registry
