--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ stages:
       inputs:
         azureSubscription: 'keyvault'                    ## YOUR_SERVICE_CONNECTION_NAME
         KeyVaultName: 'andy-cert-keyvault'                         ## YOUR_KEY_VAULT_NAME
-        SecretsFilter: 'postgres-url, postgres-user, postgres-pass'                      ## YOUR_SECRET_NAME. Default value: *
+        SecretsFilter: 'postgres-url, postgres-user, postgres-pass, sonar-url, sonar-token'                      ## YOUR_SECRET_NAME. Default value: *
         RunAsPreJob: false                                   ## Make the secret(s) available to the whole job
 
     - task: Cache@2
@@ -81,9 +81,16 @@ stages:
         effectivePomSkip: false
         options: '-DPOSTGRES_URL=$(postgres-url) -DPOSTGRES_USER=$(postgres-user) -DPOSTGRES_PASS=$(postgres-pass)'
         goals: "-B package"
+ 
+    - task: Maven@3
+      displayName: Static Analysis on SonarQube
+      inputs:     
+        mavenPomFile: 'Application/pom.xml'
+        goals: "sonar:sonar"
+        options: "Dsonar.projectKey=azure-spring -Dsonar.host.url=$(sonar-url) -Dsonar.login=$(sonar-token)"
 
-    - task: SonarQubeAnalyze@5
-      displayName: 'Run Code Analysis'        
+    # - task: SonarSource.sonarqube.6D01813A-9589-4B15-8491-8164AEB38055.SonarQubeAnalyze@5
+    #   displayName: 'Run Code Analysis'        
     - task: Docker@2
       displayName: Build and push an image to container registry
       condition: contains(variables['build.sourceBranch'], 'RC')
