--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -132,7 +132,7 @@ stages:
               containers: |
                 $(containerRegistry)/$(imageRepository):$(tag)
 
-- stage: Deploy production
+- stage: Deploy_prod
   displayName: Deploy production
   dependsOn: Build
   condition: contains(variables['build.sourceBranch'], 'RELEASE')
